# chat-bor-bkp

./: .env  Cargo.toml  Procfile  data.json  data_text.json  node.json  teste.json
migrations/2023-02-17-000149_users/: down.sql  up.sql
src/: cofg.rs  main.rs  schema.rs
src/chat/: bot.rs  db_mongo.rs  factory_msg_send_text.rs  mod.rs  models.rs  models_instagram.rs  send_list_wp.rs
src/chat/structs/: list_mongo.rs  mod.rs  status.rs  text_buttons.rs  text_mongo.rs
src/http/: gupshup_controller.rs  http_controller.rs  insta_controller.rs  mod.rs  models.rs  siga_controller.rs
src/model/: db.rs  fns.rs  mod.rs  models.rs  mongo.rs
static/: build.html  build.js  chat.css  index.html  style.css
static/node-create/: componentes.js  context-menu.css  liveview.js  text.js  view.css
