[package]
name = "crm-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

regex = "1.7.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8.6", features = ["preserve_order"] }
reqwest = { version = "0.11" , features = [ "json"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
base64 = "*"


futures = "0.3.15"


multipart = "*"
chrono = "0.4"
serde_urlencoded = "0.7"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["tokio-runtime"]